feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -191,3 +191,23 @@
   title        = {Dokumentacja usługi GitHub Actions Artifacts},
   howpublished = {Dostęp zdalny (17.12.2023): \url{https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts}}
 }
+
+@misc{k8s,
+  title        = {Strona internetowa orkiestratora kontenerów Kubernetes},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://kubernetes.io}}
+}
+
+@misc{gcp,
+  title        = {Strona internetowa chmury Google Cloud Platform},
+  howpublished = {Dostęp zdalny (17.12.2023): \url{https://cloud.google.com}}
+}
+
+@misc{grafana-loki,
+  title        = {Strona internetowa zestawu narzędzi Grafana Loki},
+  howpublished = {Dostęp zdalny (18.12.2023): \url{https://grafana.com/oss/loki/}}
+}
+
+@misc{axon-console,
+  title        = {Strona internetowa zestawu narzędzi Grafana Loki},
+  howpublished = {Dostęp zdalny (18.12.2023): \url{https://grafana.com/oss/loki/}}
+}
