feat(thesis): WIP thesis

--- a/docs/thesis/tex/3-analiza.tex
+++ b/docs/thesis/tex/3-analiza.tex
@@ -34,7 +34,7 @@ Aby móc podzielić system informatyczny na komponenty, później przekształcon
 Burza Zdarzeń to metoda warsztatowa używana w projektowaniu i analizie systemów opartych na mikroserwisach. Została opracowana przez Alberto Brandoliniego i polega na interaktywnym modelowaniu procesów biznesowych poprzez identyfikację i dyskusję na temat "zdarzeń" mających znaczenie biznesowe. Uczestnicy, wykorzystując kolorowe karteczki, reprezentują różne aspekty systemu, takie jak wydarzenia, komendy, czy modele danych. Ta metoda sprzyja współpracy między różnymi zespołami, pomagając im lepiej zrozumieć procesy biznesowe i technologiczne oraz identyfikować potencjalne problemy i możliwości dla architektury mikroserwisowej.
 
 \begin{figure}[!h]
-    \centering \includegraphics[width=0.8\linewidth]{event_storming.png}
+    \centering \includegraphics[width=1.0\linewidth]{event_storming.png}
     \caption{Przykładowy rezultat sesji Burzy Zdarzeń \cite{event_storming_rys}}
 \end{figure}
 
@@ -59,8 +59,10 @@ W ramach sesji przeprowadzono kolejno następujące kroki:
 
 \end{itemize}
 
+\clearpage
+
 \begin{figure}[!h]
-    \centering \includegraphics[width=0.8\linewidth]{event_storming2.png}
+    \centering \includegraphics[width=1.0\linewidth]{event_storming2.png}
     \caption{Rezultat sesji Burzy Zdarzeń dla projektowanego systemu}
 \end{figure}
 
