feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -211,3 +211,13 @@
   title        = {Strona internetowa zestawu narzędzi Grafana Loki},
   howpublished = {Dostęp zdalny (18.12.2023): \url{https://grafana.com/oss/loki/}}
 }
+
+@misc{kotest,
+  title        = {Strona internetowa biblioteki do testowania - Kotest},
+  howpublished = {Dostęp zdalny (20.12.2023): \url{https://kotest.io}}
+}
+
+@misc{jacoco,
+  title        = {Strona internetowa biblioteki do mierzenia pokrycia testami - JaCoCo},
+  howpublished = {Dostęp zdalny (20.12.2023): \url{https://www.jacoco.org/jacoco/}}
+}
