--- a/docs/thesis/tex/8-podsumowanie.tex
+++ b/docs/thesis/tex/8-podsumowanie.tex
@@ -12,6 +12,6 @@ Dalszy rozwój aplikacji, np. w ramach pracy magisterskiej, może obejmować nas
 
 \textbf{Rozszerzenie funkcjonalności aplikacji} W ramach rozwoju aplikacji można rozszerzyć jej funkcjonalność o dodatkowe możliwości, np. analizę i wizualizację danych związanych ze sprzedażą, wydajnością kurierów, itp.
 
-\textbf{Podniesienie wydajności systemu i dalsze testy wydajnościowe} W ramach dalszego rozwoju aplikacji można podjąć próbę dalszego zwiększenia wydajności systemu, np. poprzez zastosowanie innych technologii, np. innej bazy danych, innych narzędzi do przetwarzania danych, itp. Można również przeprowadzić dalsze testy wydajnościowe, np. z wykorzystaniem większej liczby użytkowników, itp. 
+\textbf{Podniesienie wydajności systemu i dalsze testy wydajnościowe} W ramach dalszego rozwoju można podjąć próbę dalszego zwiększenia wydajności systemu, np. poprzez zastosowanie innych technologii, np. innej bazy danych, innych narzędzi do przetwarzania danych, itp. Można również przeprowadzić testy wydajnościowe z wykorzystaniem większej liczby użytkowników równolegle.
 
 \textbf{Ulepszenie warstwy prezentacji części klienckiej} W ramach dalszego rozwoju aplikacji można podjąć próbę ulepszenia warstwy prezentacji części klienckiej, np. poprzez zastosowanie innych technologii, bardziej dopasowanych do dziedziny systemu, takich jak aplikacje mobilne. 
