feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -221,3 +221,13 @@
   title        = {Strona internetowa biblioteki do mierzenia pokrycia testami - JaCoCo},
   howpublished = {Dostęp zdalny (20.12.2023): \url{https://www.jacoco.org/jacoco/}}
 }
+
+@misc{restassured,
+  title        = {Strona internetowa biblioteki do testowania API - Rest Assured},
+  howpublished = {Dostęp zdalny (22.12.2023): \url{https://rest-assured.io}}
+}
+
+@misc{selenium,
+  title        = {Strona internetowa biblioteki do automatyzacji przeglądarek internetowych do celów testowych - Selenium},
+  howpublished = {Dostęp zdalny (22.12.2023): \url{https://www.selenium.dev}}
+}
