feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -123,7 +123,7 @@
 }
 
 @misc{locust,
-  title        = {Strona internetowa biblioteki Locust},
+  title        = {Strona internetowa biblioteki do testów wydajnościowych Locust},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://locust.io}}
 }
 
