feat(thesis): WIP thesis

--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -14,6 +14,7 @@
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
 
 \usepackage[dvipsnames]{xcolor}
+\usepackage{makecell}
 
 \lstdefinelanguage{Kotlin}{
   comment=[l]{//},
