--- a/docs/thesis/tex/8-podsumowanie.tex
+++ b/docs/thesis/tex/8-podsumowanie.tex
@@ -4,7 +4,11 @@
 
 \subsection{Wnioski}
 
+TODO wnioski z wydajności
+
 \subsection{Stopień realizacji założeń}
+
+TODO chyba wszystko?
 
 \subsection{Możliwości dalszego rozwoju}
 
